# LibAFL

./: .gitignore  Cargo.toml
.github/workflows/: build_and_test.yml
fuzzers/binary_only/frida_windows_gdiplus/: harness.cc
fuzzers/binary_only/frida_windows_gdiplus/src/: fuzzer.rs
fuzzers/forkserver/forkserver_libafl_cc/: README.md
fuzzers/forkserver/forkserver_libafl_cc/src/: main.rs  program.c
fuzzers/forkserver_libafl_cc/: Cargo.toml  Makefile.toml
fuzzers/forkserver_libafl_cc/src/: main.rs
fuzzers/frida_gdiplus/: Cargo.toml  README.md  harness.cc  hooks.yaml
fuzzers/frida_gdiplus/src/: crash_stack.rs  fuzzer.rs  main.rs  reachability_rt.rs
fuzzers/frida_libpng/: Cargo.toml
fuzzers/frida_libpng/src/: fuzzer.rs
fuzzers/frida_simple_exe/: Cargo.toml  Makefile.toml  README.md  ctrl_c.py  ctrl_c_test.py  frida_inject.js  frida_inject.py
fuzzers/frida_simple_exe/src/: fuzzer.rs  lib.rs  main.rs
fuzzers/frida_simple_exe/test/: test.cpp
fuzzers/inprocess/libfuzzer_libpng/src/: lib.rs
fuzzers/libfuzzer_libpng/: Cargo.toml  README.md
fuzzers/libfuzzer_libpng/src/: accum_observer.rs  lib.rs
fuzzers/qemu_coverage/: Makefile.toml
fuzzers/toolbox/: Cargo.toml  README.md
fuzzers/toolbox/src/: accum_observer.rs  crash_stack.rs  lib.rs  reachability_rt.rs
fuzzers/toolbox/utils/: crash_converter.py  test.metadata  test_crash_converter.py
libafl/: Cargo.toml
libafl/src/events/: launcher.rs
libafl/src/executors/: forkserver.rs  inprocess.rs
libafl/src/executors/hooks/: windows.rs
libafl/src/observers/: stacktrace.rs
libafl/src/observers/map/: hitcount_map.rs  multi_map.rs
libafl_bolts/: Cargo.toml
libafl_bolts/src/: cli.rs  llmp.rs  minibsod.rs
libafl_bolts/src/os/: unix_signals.rs  windows_exceptions.rs
libafl_bolts/src/rands/: mod.rs
libafl_frida/: Cargo.toml
libafl_frida/src/: alloc.rs  coverage_rt.rs  drcov_rt.rs  executor.rs  helper.rs  hook_rt.rs  lib.rs  windows_hooks.rs
libafl_frida/src/asan/: asan_rt.rs  hook_funcs.rs
libafl_targets/src/: drcov.rs  sancov_8bit.rs
scripts/: merge_drcov.py
utils/drcov/: README.md  merge_drcov.py
