[package]
name = "frida_simple_exe"
edition = "2021"
version = "0.1.0"

[[bin]]
name = "frida_simple_exe_injector"
path = "src/main.rs"

[lib]
name = "frida_simple_exe"
crate_type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0.42", features = ["parallel"] }

[dependencies]
libafl = { path = "../../libafl/", features = [ "std", "llmp_compression", "llmp_bind_public", "frida_cli", "introspection" ] } #,  "llmp_small_maps", "llmp_debug"]}
libafl_bolts = { path = "../../libafl_bolts/" }
capstone = "0.11.0"
frida-gum = { version = "0.13.2", features = [ "auto-download", "event-sink", "invocation-listener"] }
libafl_frida = { path = "../../libafl_frida", features = ["cmplog"] }
libafl_targets = { path = "../../libafl_targets", features = ["sancov_cmplog"] }
libc = "0.2"
libloading = "0.7"
num-traits = "0.2"
rangemap = "1.3"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
mimalloc = { version = "*", default-features = false }
lazy_static = "1"
backtrace = "0.3"
color-backtrace = "0.5"
winapi = { version = "0.3", features = ["winbase", "winerror", "minwindef", "consoleapi", "processenv", "memoryapi", "processthreadsapi", "winnt", "handleapi"] }
winapi-build = "0.1"
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }

log = { version = "0.4", features = ["std"] }
env_logger = "0.9.0"