[package]
name = "libfuzzer_libpng"
version = "0.11.2"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = "4.4"

[dependencies]
libafl = { path = "../../libafl/", features = ["default", "frida_cli"] }
# libafl = { path = "../../libafl/", features = ["default"] }
libafl_bolts = { path = "../../libafl_bolts/", features = ["derive", "cli"]}
libafl_targets = { path = "../../libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer", "sancov_cmplog"] }
# TODO Include it only when building cc
libafl_cc = { path = "../../libafl_cc/" }
mimalloc = { version = "*", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # serialization lib
rangemap = "1.3"
ahash = "0.8"
clap_builder = {version = "4.5.1"}
goblin = "0.7"
log = "0.4.20"
env_logger = "0.9"

[lib]
name = "libfuzzer_libpng"
crate-type = ["staticlib"]
