[package]
name = "libfuzzer_libpng"
version = "0.12.0"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []
# Forces a crash
crash = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = "4.4"

[dependencies]
libafl = { path = "../../libafl/", features = ["default", "frida_cli"] }
# libafl = { path = "../../libafl/", features = ["default"] }
libafl_bolts = { path = "../../libafl_bolts/", features = ["derive", "cli", "frida_cli"]}
libafl_targets = { path = "../../libafl_targets/", features = ["sancov_pcguard_hitcounts", "libfuzzer"] }
# TODO Include it only when building cc
libafl_cc = { path = "../../libafl_cc/" }
mimalloc = { version = "*", default-features = false }
clap_builder = {version = "4.5.1"}
log = "0.4.20"
env_logger = "0.9"
toolbox = {path = "../toolbox/"}

[lib]
name = "libfuzzer_libpng"
crate-type = ["staticlib"]
