[package]
name = "toolbox"
version = "0.13.0"
description = "Useful facilities that are not common enough to push to the upstream"
license = "MIT OR Apache-2.0"
authors = ["Moshe Kravchik <mkravchik@hotmail.com>"]
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "README.md"
keywords = ["fuzzing", "testing", "security"]
edition = "2021"
categories = ["development-tools::testing"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[dependencies]
libafl = { path = "../../libafl/", features = ["default"] }
libafl_bolts = { path = "../../libafl_bolts/", features = ["derive"]}
libafl_targets = { path = "../../libafl_targets/", features = ["sancov_pcguard_hitcounts", "sancov_cmplog"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] } # serialization lib
rangemap = "1.3"
ahash = "0.8"
goblin = "0.7"
log = "0.4.20"
libc = "0.2"
# for reachability
serde_yaml = { version = "0.8"} # For parsing the hooks yaml file
frida-gum = { version = "0.13.6", features = [ "auto-download", "event-sink", "invocation-listener"] }
libafl_frida = { path = "../../libafl_frida", features = ["cmplog"] }
hashbrown = "0.14"

# for crash_stack
backtrace = "0.3"

[dev-dependencies]
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"], default-features = false } # no_std compatible serde serialization format

